--- a/Home/templates/Home/base.html
+++ b/Home/templates/Home/base.html
@@ -40,8 +40,9 @@
             <ul class="nav user-menu">
                <li class="nav-item dropdown noti-dropdown">
                   <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                   {% if unread_notification_count > 0 %}
-                  <i class="far fa-bell"></i> <span class="badge badge-pill">{{unread_notification_count}}</span>
+                     <i class="far fa-bell"></i>
+                     {% if unread_notification_count > 0 %}
+                     <span class="badge badge-pill">{{unread_notification_count}}</span>
                   {% endif %}
                   </a>
                   <div class="dropdown-menu notifications">
@@ -102,13 +103,11 @@
                      <li class="menu-title">
                         <span>Main Menu</span>
                      </li>
-                     <li class="submenu active">
-                        <a href="#"><i class="fas fa-user-graduate"></i> <span> Dashboard</span> <span class="menu-arrow"></span></a>
-                        <ul>
-                           <li><a href="index.html" class="active">Admin Dashboard</a></li>
-                           <li><a href="teacher-dashboard.html">Teacher Dashboard</a></li>
-                           <li><a href="student-dashboard.html">Student Dashboard</a></li>
-                        </ul>
+                     <li class="{% if request.path == '/dashboard/' %}active{% endif %}">
+                     <a href="{% url 'dashboard' %}">
+                        <i class="fas fa-user-graduate"></i>
+                        <span>Dashboard</span>
+                     </a>
                      </li>
                      <li class="submenu">
                         <a href="#"><i class="fas fa-user-graduate"></i> <span> Students</span> <span class="menu-arrow"></span></a>
@@ -273,7 +272,7 @@
               if (notiDropdown) {
                   // Add a click event listener to the notification dropdown
                   notiDropdown.addEventListener('click', function() {
-                      const url = "{% url 'mark_notifications_as_read' %}";
+                      const url = "{% url 'mark_notification_as_read' %}";
       
                       // Use the Fetch API to send a POST request to mark notifications as read
                       fetch(url, {
