--- a/Home/templates/authentication/register.html
+++ b/Home/templates/authentication/register.html
@@ -54,6 +54,14 @@
                                 <input class="form-control" type="email" name="email" placeholder="Email" required>
                             </div>
                             <div class="form-group">
+                                <select class="form-control" name="role" required>
+                                    <option value="" disabled selected>Choose your role</option>
+                                    <option value="teacher">Teacher</option>
+                                    <option value="student">Student</option>
+                                    <option value="admin">Admin</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
                                 <input class="form-control" type="password" name="password" placeholder="Password" required>
                             </div>
                             <div class="form-group">
